Image that respects aspect-ratio and prevents layout shift

--- a/src/index.css
+++ b/src/index.css
@@ -195,6 +195,11 @@ a {
   text-decoration: inherit; /* no underline */
 }
 
+/*img {
+  object-fit: cover;
+}*/
+
 .rounded {
   border-radius: 50%;
 }
+
